...
                ),
              ),
              const SizedBox(height: 20.0),
              ListTile(
                leading: Icon(Icons.task), // display in starting
                trailing: IconButton(
                  key: Key('todoBtn'),
                  icon:
                      const Icon(Icons.arrow_forward), // Icon on the right side
                  onPressed: () {
                    Get.toNamed(Routes.todo);
                  },
                ), // display in end
                title: Text('Todo'),
                subtitle: Text('Plan your work'),
              ),
            ],
          ),
        ),
      );
...
