...
      appBar: AppBar(title: const Text('To-Do List')),
      body: Column(
        children: [
          Padding(
            padding: const EdgeInsets.all(8.0),
            child: TextField(
              key: Key("addNewField"),
              controller: taskControllerInput,
              decoration: const InputDecoration(labelText: 'Add new task'),
            ),
          ),
          ElevatedButton(
            key: Key("addNewBtn"),
            onPressed: () {
              if (taskControllerInput.text.isNotEmpty) {
                taskController.addTask(taskControllerInput.text);
                taskControllerInput.clear();
              }
            },
...
